--- a/together/Base.lproj/Main.storyboard
+++ b/together/Base.lproj/Main.storyboard
@@ -495,7 +495,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="js6-ge-8DQ">
-                                <rect key="frame" x="113.5" y="557" width="150" height="20"/>
+                                <rect key="frame" x="112.5" y="557" width="150" height="20"/>
                                 <state key="normal" image="managegroup.png">
                                     <attributedString key="attributedTitle">
                                         <fragment content="揪團管理">
@@ -510,11 +510,8 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRT-9c-XaH">
-                                <rect key="frame" x="75.5" y="88" width="225" height="224.5"/>
+                                <rect key="frame" x="75" y="88" width="225" height="224.5"/>
                                 <state key="normal" title="takepicture"/>
-                                <connections>
-                                    <action selector="takepic:" destination="9sH-T1-wyt" eventType="touchUpInside" id="LKo-ZM-GNr"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppQ-GX-JuN" userLabel="Name">
                                 <rect key="frame" x="19" y="383.5" width="37.5" height="33"/>
@@ -524,19 +521,30 @@
                                 <rect key="frame" x="19" y="433.5" width="37.5" height="33"/>
                                 <state key="normal" title="Button" image="introduce.png"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P8b-Vz-Kck" userLabel="takepic">
+                                <rect key="frame" x="84.5" y="266.5" width="56.5" height="67"/>
+                                <state key="normal" image="addimg.png"/>
+                                <connections>
+                                    <action selector="takepicBTN:" destination="9sH-T1-wyt" eventType="touchUpInside" id="qpF-FS-znW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="KSq-V5-OEb" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="0.2" id="05Y-tc-gQE"/>
                             <constraint firstItem="KSq-V5-OEb" firstAttribute="width" secondItem="PxB-di-wLT" secondAttribute="width" multiplier="0.1" id="3Q9-Sy-v2T"/>
                             <constraint firstItem="ppQ-GX-JuN" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="0.2" id="3QZ-zP-8cV"/>
+                            <constraint firstItem="P8b-Vz-Kck" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="0.6" id="6dH-cj-xI7"/>
+                            <constraint firstItem="P8b-Vz-Kck" firstAttribute="width" secondItem="PxB-di-wLT" secondAttribute="width" multiplier="0.15" id="7KF-KU-aSh"/>
                             <constraint firstItem="qRT-9c-XaH" firstAttribute="width" secondItem="PxB-di-wLT" secondAttribute="width" multiplier="0.6" id="E5Y-6m-9Z1"/>
+                            <constraint firstItem="P8b-Vz-Kck" firstAttribute="centerY" secondItem="PxB-di-wLT" secondAttribute="centerY" multiplier="0.9" id="Etq-5g-fzf"/>
                             <constraint firstItem="lbS-z9-pMA" firstAttribute="width" secondItem="PxB-di-wLT" secondAttribute="width" multiplier="0.3" id="FAu-Tf-mA2"/>
                             <constraint firstItem="js6-ge-8DQ" firstAttribute="centerY" secondItem="PxB-di-wLT" secondAttribute="centerY" multiplier="1.7" id="Gdz-rE-2XZ"/>
                             <constraint firstItem="CZz-iB-Tw6" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="1.2" id="I69-aS-LDJ"/>
                             <constraint firstItem="knD-Cw-pZ2" firstAttribute="height" secondItem="PxB-di-wLT" secondAttribute="height" multiplier="0.05" id="Imb-s4-Nin"/>
                             <constraint firstItem="lbS-z9-pMA" firstAttribute="height" secondItem="PxB-di-wLT" secondAttribute="height" multiplier="0.05" id="MRz-mk-7zy"/>
                             <constraint firstItem="js6-ge-8DQ" firstAttribute="width" secondItem="PxB-di-wLT" secondAttribute="width" multiplier="0.4" id="McB-lz-xf4"/>
+                            <constraint firstItem="P8b-Vz-Kck" firstAttribute="height" secondItem="PxB-di-wLT" secondAttribute="height" multiplier="0.1" id="Ni2-1X-wns"/>
                             <constraint firstItem="knD-Cw-pZ2" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="0.4" id="QeU-NW-n05"/>
                             <constraint firstItem="js6-ge-8DQ" firstAttribute="height" secondItem="PxB-di-wLT" secondAttribute="height" multiplier="0.03" id="RNb-wB-Ui4"/>
                             <constraint firstItem="lbS-z9-pMA" firstAttribute="centerX" secondItem="PxB-di-wLT" secondAttribute="centerX" multiplier="0.4" id="S95-CF-XdP"/>
@@ -1304,13 +1312,13 @@
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="簡介" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ux-nt-E1f">
-                                <rect key="frame" x="56.5" y="390" width="37.5" height="20"/>
+                                <rect key="frame" x="56.5" y="390" width="75" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="暱稱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qjn-F3-6TT">
-                                <rect key="frame" x="56.5" y="340" width="37.5" height="20"/>
+                                <rect key="frame" x="56.5" y="340" width="75" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1363,20 +1371,20 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C80-Wf-z0h" userLabel="name">
                                 <rect key="frame" x="19" y="333.5" width="37.5" height="33"/>
-                                <state key="normal" title="Button" image="name.png"/>
+                                <state key="normal" image="name.png"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXB-RH-m2K" userLabel="introduce">
                                 <rect key="frame" x="19" y="383.5" width="37.5" height="33"/>
-                                <state key="normal" title="Button" image="introduce.png"/>
+                                <state key="normal" image="introduce.png"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="qjn-F3-6TT" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.1" id="02X-wP-rh7"/>
+                            <constraint firstItem="qjn-F3-6TT" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.2" id="02X-wP-rh7"/>
                             <constraint firstItem="bYc-Yb-fjx" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.6" id="25q-V0-4q1"/>
                             <constraint firstItem="6Ux-nt-E1f" firstAttribute="height" secondItem="0u1-mG-Isf" secondAttribute="height" multiplier="0.03" id="4nX-be-j1y"/>
                             <constraint firstItem="3Vm-1c-cQe" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.3" id="6QR-1g-pqg"/>
-                            <constraint firstItem="6Ux-nt-E1f" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.1" id="7d5-38-6eV"/>
+                            <constraint firstItem="6Ux-nt-E1f" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.2" id="7d5-38-6eV"/>
                             <constraint firstItem="vaw-gs-zMY" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" id="D4u-9q-EPQ"/>
                             <constraint firstItem="Rim-Y7-XTy" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="1.3" id="DYL-C0-dnB"/>
                             <constraint firstItem="qjn-F3-6TT" firstAttribute="centerY" secondItem="0u1-mG-Isf" secondAttribute="centerY" multiplier="1.05" id="FAm-YS-fkU"/>
@@ -1388,7 +1396,7 @@
                             <constraint firstItem="DXB-RH-m2K" firstAttribute="height" secondItem="0u1-mG-Isf" secondAttribute="height" multiplier="0.05" id="TMi-4H-2sw"/>
                             <constraint firstItem="bYc-Yb-fjx" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="1.3" id="Vfj-iR-mg3"/>
                             <constraint firstItem="3Vm-1c-cQe" firstAttribute="height" secondItem="0u1-mG-Isf" secondAttribute="height" multiplier="0.05" id="VqZ-4F-Biw"/>
-                            <constraint firstItem="qjn-F3-6TT" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="0.4" id="Vz0-sj-R1e"/>
+                            <constraint firstItem="qjn-F3-6TT" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="0.5" id="Vz0-sj-R1e"/>
                             <constraint firstItem="LJv-cd-8rZ" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.3" id="ZBC-cT-WDx"/>
                             <constraint firstItem="DXB-RH-m2K" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.1" id="ZOM-7R-5kv"/>
                             <constraint firstItem="6Ux-nt-E1f" firstAttribute="centerY" secondItem="0u1-mG-Isf" secondAttribute="centerY" multiplier="1.2" id="ctt-q8-DC2"/>
@@ -1401,7 +1409,7 @@
                             <constraint firstItem="vaw-gs-zMY" firstAttribute="width" secondItem="0u1-mG-Isf" secondAttribute="width" multiplier="0.6" id="hOU-sg-NHh"/>
                             <constraint firstItem="vaw-gs-zMY" firstAttribute="height" secondItem="0u1-mG-Isf" secondAttribute="height" multiplier="0.337" id="hZS-qV-CFe"/>
                             <constraint firstItem="3Vm-1c-cQe" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="1.4" id="jaB-Xq-wBU"/>
-                            <constraint firstItem="6Ux-nt-E1f" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="0.4" id="jgr-b9-25t"/>
+                            <constraint firstItem="6Ux-nt-E1f" firstAttribute="centerX" secondItem="0u1-mG-Isf" secondAttribute="centerX" multiplier="0.5" id="jgr-b9-25t"/>
                             <constraint firstItem="LJv-cd-8rZ" firstAttribute="centerY" secondItem="0u1-mG-Isf" secondAttribute="centerY" multiplier="1.75" id="k7A-JC-Bm6"/>
                             <constraint firstItem="3Vm-1c-cQe" firstAttribute="centerY" secondItem="0u1-mG-Isf" secondAttribute="centerY" multiplier="1.75" id="qxM-fq-JYH"/>
                             <constraint firstItem="qjn-F3-6TT" firstAttribute="height" secondItem="0u1-mG-Isf" secondAttribute="height" multiplier="0.03" id="syQ-Eu-4zq"/>
